apps/gpt-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt-api
  namespace: api
  labels:
    app: gpt-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpt-api
  template:
    metadata:
      labels:
        app: gpt-api
    spec:
      nodeSelector:
        "vke.vultr.com/node-pool": "main-node-pool"
      containers:
      - name: gpt-api
        image: hyeonwoo5342/gpt-api:14
        imagePullPolicy: Always
        ports:
        - containerPort: 9900
      imagePullSecrets:
      - name: dockerhub-secret
---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: gpt-api
#   namespace: api
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: gpt-api
#   minReplicas: 2
#   maxReplicas: 10
