apps/gpt-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpt-api
  namespace: api
  labels:
    app: gpt-api
spec:
  type: ClusterIP
  ports:
    - port: 9900
  selector:
    app: gpt-api
